# simple-nn

./: BUILD  CMakeLists.txt  Dockerfile  Dockerfile.base  LICENSE  README.md  circle.yml  main.cc
lib/: BUILD
lin-alg/: BUILD  lin-alg.cc  lin-alg.h  test.cc  test.h
lin-alg/include/: lin-alg.h
lin-alg/src/: lin-alg.cc
mnist/: BUILD  bmp_writer.cc  load.h  load_mnist.cc  load_mnist.h  mnist.cc  mnist.h
mnist/src/: mnist.cc
simple-nn/: BUILD  simple-nn.cc  simple-nn.h  test.cc
simple_nn/include/: simple_nn.h
simple_nn/src/: simple_nn.cc  test.cc
simplenet/include/: activation_functions.h  layer.h  network.h  network_types.h
simplenet/include/simplenet/: activation_functions.h  layer.h  network.h
simplenet/src/: layer.cc  network.cc  simplenet.cc  test.cc
